--- a/IFML/sth/.project
+++ b/IFML/sth/.project
@@ -3,11 +3,11 @@
 <projectDescription> 
   <name>sth</name>  
   <comment/>  
-  <projects></projects>  
+  <projects/>  
   <buildSpec> 
     <buildCommand> 
       <name>com.webratio.ide.core.wrcorebuilder</name>  
-      <arguments></arguments> 
+      <arguments/> 
     </buildCommand> 
   </buildSpec>  
   <natures> 
