java exercises for fun

--- a/Java OOP/bin/.gitignore
+++ b/Java OOP/bin/.gitignore
@@ -14,3 +14,7 @@
 /Shift.class
 /StringList.class
 /ImageSizeConverter.class
+/MoneyConverter.class
+/Temperature.class
+/splitInTeams.class
+/GolombPostulates.class
