--- a/Java OOP/.classpath
+++ b/Java OOP/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="Others"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Program Files/JUnit4.12/junit-4.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
