beginning of assign.3

--- a/Java OOP/bin/.gitignore
+++ b/Java OOP/bin/.gitignore
@@ -1,8 +1,2 @@
-/StringList_2.class
-/StringList2.class
-/StringList.class
-/MainA2.class
-/Assignment2_1Test.class
-/Assignment2_2Test.class
-/StringListTest$1StringListMock.class
-/StringListTest.class
+/Date.class
+/DateTest.class
