ass3 tests finished

--- a/Java OOP/bin/.gitignore
+++ b/Java OOP/bin/.gitignore
@@ -1,5 +1,39 @@
-/DateSetTest.class
-/Person.class
-/PersonTest.class
+/Assignment1CircleTest$1CircleMock.class
+/Assignment1CircleTest$1PointMock.class
+/Assignment1CircleTest$2PointMock.class
+/Assignment1PointTest$1PointMock.class
+/Assignment1PointTest.class
+/Assignment1_1.class
+/Assignment1_2.class
+/Assignment1_3.class
+/Assignment1_4.class
+/Assignment1_5.class
+/Assignment1_6.class
+/Assignment1_7.class
+/Assignment2_1.class
+/Assignment2_1Test.class
+/Assignment2_2.class
+/Assignment2_2Test.class
+/Circle.class
+/Date.class
 /DatePicker.class
 /DatePickerTest.class
+/DateSet.class
+/DateSetTest.class
+/DateTest.class
+/GolombPostulates.class
+/ImageSizeConverter.class
+/IsCloseTo.class
+/Main.class
+/MainA2.class
+/MoneyConverter.class
+/MoneyUnitsConverter.class
+/Person.class
+/PersonTest.class
+/Point.class
+/Shift.class
+/StringList.class
+/StringListTest$1StringListMock.class
+/StringListTest.class
+/Temperature.class
+/splitInTeams.class
