--- a/Java OOP/.classpath
+++ b/Java OOP/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="src" path="Others"/>
 	<classpathentry kind="src" path="Assignment 3"/>
 	<classpathentry kind="src" path="Tests Ass3"/>
+	<classpathentry kind="src" path="Assignment 4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/JUnit4.12/junit-4.12.jar"/>
