Doubly-linked list, not finished tho

--- a/AlgorithmsAndDataStructures/.classpath
+++ b/AlgorithmsAndDataStructures/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="src" path="Assignment 3"/>
 	<classpathentry kind="src" path="Assignment 5"/>
 	<classpathentry kind="src" path="RandomDSandAlgos"/>
+	<classpathentry kind="src" path="Recursion"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
